--- a/_elements/07-horizontal-rule.html
+++ b/_elements/07-horizontal-rule.html
@@ -1,8 +1,7 @@
 ---
 tips: 
-  - Three or more Underscores, Hyphens or Asterisks...
+  - 3 or more Underscores, Hyphens or Asterisks...
 ---
-
 ___
 
 ---
