--- a/_elements/12-ordered-list.html
+++ b/_elements/12-ordered-list.html
@@ -1,10 +1,9 @@
 ---
 ---
-
-1. First ordered list item
+1. 1st ordered list item
 2. Another item
    * Unordered sub-list. 
 1. Actual numbers don't matter, just that it's a number
    1. Ordered sub-list
-4. And another item.  
-   Some text that should be aligned with the above item.
+4. & another item.  
+   Some text which should be aligned with the above item.
