--- a/_elements/02-emphasis.html
+++ b/_elements/02-emphasis.html
@@ -1,7 +1,6 @@
 ---
 ---
-
 Emphasis, aka italics, with *asterisks* or _underscores_.  
 Strong emphasis, aka bold, with **asterisks** or __underscores__.  
-Combined emphasis with **asterisks and _underscores_**.  
-Strikethrough uses two tildes. ~~Scratch this.~~
+Combined emphasis with **asterisks & _underscores_**.  
+Strikethrough uses 2 tildes. ~~Scratch this.~~
