--- a/_elements/06-line-breaks.html
+++ b/_elements/06-line-breaks.html
@@ -1,9 +1,8 @@
 ---
 ---
-
 Here's a line for us to start with.
 
-This line is separated from the one above by two newlines, so it will be a *separate paragraph*.
+This line is separated from the 1 above by 2 newlines, so it'll be a *separate paragraph*.
 
 This line is also a separate paragraph, but...
 This line is only separated by a single newline, so it's a separate line in the *same paragraph*.
