--- a/_projects/is-445-homework-5/index.html
+++ b/_projects/is-445-homework-5/index.html
@@ -1,3 +1,16 @@
+---
+layout: page
+permalink: /projects/is-445-homework-5/
+title: IS 445 Homework 5 Jekyll Page - Bigfoot Sightings Visualizations
+tools: [Altair, Python, Vega-Lite]
+image: /assets/pngs/bigfoot.png
+description: Interactive visualizations of Bigfoot sightings using Altair & Vega-Lite!
+custom_js:
+  - vega.min
+  - vega-lite.min
+  - vega-embed.min
+  - justcharts
+---
 <!DOCTYPE html>
 <!--
   portfolYOU Jekyll theme by Youssef Raafat
@@ -11,12 +24,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IS 445 Homework 5 - Bigfoot Sightings Visualizations</title>
-    <!-- Custom JS for Vega-Lite rendering -->
-    <script src="{{ site.baseurl }}/assets/js/vega.min.js"></script>
-    <script src="{{ site.baseurl }}/assets/js/vega-lite.min.js"></script>
-    <script src="{{ site.baseurl }}/assets/js/vega-embed.min.js"></script>
-    <script src="{{ site.baseurl }}/assets/js/justcharts.js"></script>
+    <title>IS 445 Homework 5 Jekyll Page - Bigfoot Sightings Visualizations</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 20px; }
         h1 { font-size: 2em; }
@@ -29,7 +37,7 @@
 </head>
 
 <body>
-    <h1>Homework 5: Bigfoot Sightings Visualizations</h1>
+    <h1>IS 445 Homework 5 Jekyll Page: Bigfoot Sightings Visualizations</h1>
     <p>This project showcases 2 visualizations of Bigfoot sighting data from the <code>bfro_reports_fall2022.csv</code> dataset, created using Altair, Python, & Vega-Lite. The 1st is a bar chart of sightings by state, & the 2nd is an interactive area chart showing temperature trends over time with a linked overview & detail view.</p>
 
     <h2>Visualization 1: Bar Chart of Bigfoot Sightings by State</h2>
