--- a/_projects/is-445-homework-5/index.html
+++ b/_projects/is-445-homework-5/index.html
@@ -44,11 +44,8 @@ description: Interactive visualizations of Bigfoot sightings using Altair & Vega
     <p>This visualization displays the number of Bigfoot sightings reported across different states, highlighting the geographic distribution of these events. I used a bar chart with the x-axis encoding state names (Nominal data) & the y-axis encoding the count of sightings (Quantitative data). The bars are colored by state using a Tableau20 color scheme to differentiate them visually, though I omitted the legend due to the large number of states for clarity. The x-axis is sorted by count in descending order to emphasize states with the most sightings. On the analysis side, I transformed the data in Python by counting occurrences per state with <code>value_counts()</code> & restructuring it into a DataFrame suitable for Altair. There’s no overlap with Homework 6, as this uses a different dataset (<code>bfro_reports_fall2022.csv</code>) & plot type.</p>
 
     <h2>Visualization 2: Interactive Area Chart of Temperature Over Time</h2>
-    <script>
-      // Embed Visualization 2
-      fetch("{{ site.baseurl }}/assets/json/area_chart.json")
-          .then(response => response.json())
-          .then(spec => vegaEmbed("#vis2", spec, { actions: false }));
+    <script type="text/javascript">
+        vegaEmbed("#vis2", "https://raw.githubusercontent.com/TheWongLife1/TheWongLife1.github.io/refs/heads/main/assets/json/area_chart.json");
     </script>
     <p>This area chart visualizes the mid-temperature of Bigfoot sightings over time, with an upper detailed view & a lower overview chart. The x-axis encodes the sighting date (Temporal data), & the y-axis encodes temperature (Quantitative data), using an area mark to show trends. I added color encoding for season with a Set3 scheme to highlight seasonal variations within the temperature data, ensuring visual distinction. In Python, I transformed the data by converting the <code>date</code> column to timestamps with <code>to_datetime</code> & filtered out rows with missing date or temperature values for accuracy. This plot differs from Homework 6, which used a scatter plot & a different dataset (<code>building_inventory.csv</code>).</p>
 
