--- a/_projects/is-445-homework-5/index.html
+++ b/_projects/is-445-homework-5/index.html
@@ -23,7 +23,6 @@ description: Interactive visualizations of Bigfoot sightings using Altair & Vega
     <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
-    <script src="{{ site.baseurl }}/assets/js/justcharts.js"></script>
     <style>
       body { 
           font-family: Arial, sans-serif; 
@@ -58,7 +57,10 @@ description: Interactive visualizations of Bigfoot sightings using Altair & Vega
     <p>This project showcases 2 visualizations of Bigfoot sighting data from the <code>bfro_reports_fall2022.csv</code> dataset, created using Altair, Python, & Vega-Lite. The 1st is a bar chart of sightings by state, & the 2nd is an interactive area chart showing temperature trends over time with a linked overview & detail view.</p>
 
     <h2>Visualization 1: Bar Chart of Bigfoot Sightings by State</h2>
-    <vegachart schema-url="{{ site.baseurl }}/assets/json/bar_chart.json" style="width: 100%"></vegachart>
+    <div id="vis"></div>
+    <script type="text/javascript">
+        vegaEmbed("#vis", "https://raw.githubusercontent.com/TheWongLife1/TheWongLife1.github.io/refs/heads/main/assets/json/bar_chart.json");
+    </script>
     <p>This visualization displays the number of Bigfoot sightings reported across different states, highlighting the geographic distribution of these events. I used a bar chart with the x-axis encoding state names (Nominal data) & the y-axis encoding the count of sightings (Quantitative data). The bars are colored by state using a Tableau20 color scheme to differentiate them visually, though I omitted the legend due to the large number of states for clarity. The x-axis is sorted by count in descending order to emphasize states with the most sightings. On the analysis side, I transformed the data in Python by counting occurrences per state with <code>value_counts()</code> & restructuring it into a DataFrame suitable for Altair. There’s no overlap with Homework 6, as this uses a different dataset (<code>bfro_reports_fall2022.csv</code>) & plot type.</p>
 
     <h2>Visualization 2: Interactive Area Chart of Temperature Over Time</h2>
@@ -72,7 +74,7 @@ description: Interactive visualizations of Bigfoot sightings using Altair & Vega
     <p>For the area chart, I implemented an interval selection (<code>brush</code>) on the x-axis of the lower overview chart, allowing users to drag a range dynamically updating the upper chart to zoom into the selected time period. This interactivity clarifies temporal trends by enabling exploration of specific date ranges, making it easier to identify patterns in temperature & seasonality, enhancing the visualization’s depth & engagement.</p>
 
     <h2>Search The Data & Methods</h2>
-    <p>Below are links to the dataset & the Python notebook used to generate these visualizations.</p>
+    <p>Below are links to the dataset & the Python notebook used to generate these visualizations (Note: GitHub doesn't display the plots in the <code>Workbook.ipynb</code> file, but <code>nbviewer</code> does here: https://nbviewer.org/github/TheWongLife1/TheWongLife1.github.io/blob/main/python_notebooks/Workbook.ipynb).</p>
     <div class="button-container">
       <a href="https://raw.githubusercontent.com/UIUC-iSchool-DataViz/is445_data/main/bfro_reports_fall2022.csv" class="button">The Data</a>
       <a href="https://github.com/TheWongLife1/TheWongLife1.github.io/blob/main/python_notebooks/Workbook.ipynb" class="button">The Code</a>
