--- a/_projects/is-445-homework-5/index.html
+++ b/_projects/is-445-homework-5/index.html
@@ -74,7 +74,7 @@ description: Interactive visualizations of Bigfoot sightings using Altair & Vega
     <p>For the area chart, I implemented an interval selection (<code>brush</code>) on the x-axis of the lower overview chart, allowing users to drag a range dynamically updating the upper chart to zoom into the selected time period. This interactivity clarifies temporal trends by enabling exploration of specific date ranges, making it easier to identify patterns in temperature & seasonality, enhancing the visualization’s depth & engagement.</p>
 
     <h2>Search The Data & Methods</h2>
-    <p>Below are links to the dataset & the Python notebook used to generate these visualizations (Note: GitHub doesn't display the plots in the <code>Workbook.ipynb</code> file, but <code>nbviewer</code> does here: https://nbviewer.org/github/TheWongLife1/TheWongLife1.github.io/blob/main/python_notebooks/Workbook.ipynb).</p>
+    <p>Below are links to the dataset & the Python notebook used to generate these visualizations (Note: GitHub doesn't display the plots in the <code>Workbook.ipynb</code> file, but <code>nbviewer</code> does here: <a href="https://nbviewer.org/github/TheWongLife1/TheWongLife1.github.io/blob/main/python_notebooks/Workbook.ipynb">https://nbviewer.org/github/TheWongLife1/TheWongLife1.github.io/blob/main/python_notebooks/Workbook.ipynb</a>).</p>
     <div class="button-container">
       <a href="https://raw.githubusercontent.com/UIUC-iSchool-DataViz/is445_data/main/bfro_reports_fall2022.csv" class="button">The Data</a>
       <a href="https://github.com/TheWongLife1/TheWongLife1.github.io/blob/main/python_notebooks/Workbook.ipynb" class="button">The Code</a>
